--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -12,7 +12,10 @@
         "confirm": "Confirm",
         "close": "Close",
         "retry": "Retry",
-        "success": "Success"
+        "success": "Success",
+        "ok": "OK",
+        "info": "Info",
+        "try_again": "Try Again"
     },
     "auth": {
         "login": "Login",
@@ -41,14 +44,78 @@
         "terms_required_msg": "Please agree to the Terms & Conditions to continue",
         "registration_success_title": "Success!",
         "registration_success_msg": "Account created successfully",
-        "registration_failed_title": "Registration Failed"
+        "registration_failed_title": "Registration Failed",
+        "sign_out": "Sign Out",
+        "sign_out_confirm": "Are you sure you want to sign out?"
     },
     "navigation": {
         "home": "Home",
-        "discovery": "Discovery",
+        "map": "Map",
         "orders": "Orders",
-        "favorites": "Favorites",
-        "profile": "Profile"
+        "saved": "Saved",
+        "profile": "Profile",
+        "inventory": "Inventory",
+        "account": "Account",
+        "dashboard": "Dashboard"
+    },
+    "settings": {
+        "title": "Settings",
+        "preferences": "PREFERENCES",
+        "location_services": "Location Services",
+        "location_subtitle": "Find deals near you",
+        "dark_mode": "Dark Mode",
+        "coming_soon": "Coming soon",
+        "language": "Language",
+        "select_language": "Select Language",
+        "choose_language": "Choose your preferred language",
+        "support": "SUPPORT",
+        "help_center": "Help Center",
+        "terms": "Terms of Service"
+    },
+    "discovery": {
+        "location_permission": "Location Permission",
+        "location_permission_msg": "We need your location to show nearby stores.",
+        "permission_denied": "Permission Denied",
+        "permission_denied_msg": "Cannot find nearby stores without location access.",
+        "current_location": "Current Location",
+        "set_location": "Set Location",
+        "search_placeholder": "Search for food...",
+        "nearby_sellers": "Nearby Sellers",
+        "see_all": "See All ›",
+        "available_now": "Available Now",
+        "offers": "offers",
+        "location_required": "Location Required",
+        "location_required_msg": "Enable location to see nearby stores and products.",
+        "enable_location": "Enable Location",
+        "no_products": "No Products Found",
+        "no_products_subtitle": "Try adjusting your filters or check back later",
+        "could_not_update_favorites": "Could not update favorites",
+        "open_settings": "Open Settings"
+    },
+    "product_detail": {
+        "pickup_time": "Pickup Time",
+        "available": "Available",
+        "item_left": "{{count}} item left",
+        "items_left": "{{count}} items left",
+        "store_location": "Store Location",
+        "open_in_maps": "Tap to open in Maps",
+        "what_you_get": "What You Get",
+        "default_description": "A surprise selection of delicious surplus food items.",
+        "quantity": "Quantity",
+        "total": "Total",
+        "you_save": "You save ${{amount}}",
+        "reserve_now": "Reserve Now",
+        "reserving": "Reserving...",
+        "sold_out": "Sold Out",
+        "loading": "Loading product details...",
+        "error_title": "Could not load product",
+        "error_subtitle": "Please check your connection and try again",
+        "km_away": "{{distance}} km away",
+        "login_to_reserve": "Please login to reserve products and save meals!",
+        "login_to_save": "Please login to save favorites!",
+        "booking_failed": "Booking Failed",
+        "could_not_update_favorites": "Could not update favorites. Please try again.",
+        "could_not_open_maps": "Could not open maps app."
     },
     "store": {
         "follow": "Follow",
@@ -56,11 +123,234 @@
         "reviews_count": "{{count}} review",
         "reviews_count_other": "{{count}} reviews",
         "about": "About",
-        "reviews": "Reviews"
+        "reviews": "Reviews",
+        "products": "Products",
+        "no_products": "No products available yet",
+        "address_not_available": "Address not available",
+        "login_to_follow": "You need to be logged in to follow stores."
+    },
+    "orders": {
+        "active": "Active",
+        "past": "Past",
+        "no_orders": "You don't have any {{status}} orders yet.",
+        "no_orders_subtitle": "Your new orders will appear here.",
+        "could_not_load": "Could not load your orders.",
+        "today": "TODAY",
+        "yesterday": "YESTERDAY",
+        "current_orders": "CURRENT ORDERS",
+        "confirmation": "Confirmation",
+        "order_confirmed": "Awesome! This one's yours.",
+        "show_code_msg": "Show this code to {{storeName}} staff.",
+        "scan_at_pickup": "SCAN AT PICKUP",
+        "paid_confirmed": "Paid & Confirmed",
+        "pickup_window": "PICKUP WINDOW",
+        "get_directions": "Get Directions",
+        "contact_support": "Having issues? Contact support",
+        "write_review": "Write a Review",
+        "back_to_home": "Back to Home",
+        "could_not_load_detail": "Could not load order details.",
+        "order_success": "Success!",
+        "order_confirmed_subtitle": "Your order has been confirmed.",
+        "back_to_discover": "Back to Home",
+        "pickup_at": "Pickup at:"
+    },
+    "favorites": {
+        "title": "Favorites",
+        "no_favorites": "No favorite products yet",
+        "no_favorites_subtitle": "Tap the heart icon on a product to save it here.",
+        "start_exploring": "Start Exploring",
+        "could_not_load": "Could not load your favorites.",
+        "followed_stores": "Followed Stores",
+        "no_followed_stores": "You haven't followed any stores yet.",
+        "explore_stores": "Explore Stores"
+    },
+    "profile": {
+        "loading": "Loading your profile...",
+        "could_not_load": "Could not load profile",
+        "check_connection": "Please check your connection and try again",
+        "member_since": "Member since {{date}}",
+        "seller_badge": "Seller",
+        "food_saver": "Food Saver",
+        "saved_deals": "Saved Deals",
+        "saved_deals_subtitle": "Your favorite picks",
+        "followed_stores": "Followed Stores",
+        "followed_stores_subtitle": "Stores you follow",
+        "notifications": "Notifications",
+        "notifications_subtitle": "Manage your alerts",
+        "become_seller": "Become a Seller",
+        "become_seller_subtitle": "Start selling your surplus food",
+        "dashboard_analytics": "Dashboard & Analytics",
+        "manage_products": "Manage Products",
+        "view_orders": "View Orders",
+        "store_settings": "Store Settings",
+        "settings": "Settings",
+        "settings_subtitle": "App preferences",
+        "help_support": "Help & Support",
+        "help_subtitle": "Get help with the app",
+        "guest_hero": "Join thousands of food savers",
+        "guest_cta_title": "Join the fight against food waste",
+        "guest_cta_subtitle": "Save delicious food nearby, save money, and help the planet.",
+        "about_mazza": "ABOUT MAZZA",
+        "how_it_works": "How It Works",
+        "support": "Support"
+    },
+    "notifications": {
+        "title": "Notifications",
+        "mark_all_read": "Mark all as read",
+        "no_notifications": "No notifications",
+        "no_notifications_subtitle": "You're all caught up! Check back later for updates."
+    },
+    "become_seller": {
+        "title": "Become a Seller",
+        "subtitle": "Join our seller community!",
+        "select_category": "Select your business category",
+        "location_permission_required": "Location Permission Required",
+        "location_permission_msg": "Enable location to auto-fill your business address. You can also enter it manually.",
+        "location_error": "Location Error",
+        "location_error_msg": "Could not get your location. Please enter your business address manually.",
+        "location_success_msg": "Location obtained! Please verify the address and city fields.",
+        "application_submitted": "Application Submitted",
+        "application_submitted_msg": "Thank you! Your application is being reviewed.",
+        "application_failed": "Application Failed",
+        "categories_load_failed": "Could not load business categories."
+    },
+    "location_onboarding": {
+        "permission_title": "Location Permission",
+        "permission_msg": "Allow access while using the app, always allow, to find the nearest stores.",
+        "permission_denied_msg": "Location access denied. Features will be limited.",
+        "location_error_msg": "Could not get your location. Make sure GPS is enabled.",
+        "save_error": "Could not save location. Please try again.",
+        "enable_location": "Enable Location",
+        "description": "We need your location to show you the best food rescue deals nearby.",
+        "use_current_location": "Use Current Location",
+        "enter_manually": "Enter Address Manually",
+        "coming_soon_msg": "Manual location selection coming soon."
+    },
+    "seller_orders": {
+        "title": "Orders",
+        "loading": "Loading orders...",
+        "no_orders": "No orders yet",
+        "no_orders_subtitle": "Customer orders will appear here",
+        "paid": "PAID",
+        "pending": "PENDING",
+        "pickup": "Pickup: {{time}}"
+    },
+    "seller_order_detail": {
+        "title": "Order Details",
+        "completed": "COMPLETED",
+        "ready_for_pickup": "READY FOR PICKUP",
+        "pending_payment": "PENDING PAYMENT",
+        "order_number": "Order #{{number}}",
+        "placed_on": "Placed on {{date}} at {{time}}",
+        "customer": "Customer",
+        "items": "Items",
+        "quantity_x": "Qty: x{{quantity}}",
+        "total": "Total",
+        "scan_hint": "Scan the customer's QR code to verify and complete the order.",
+        "scan_qr": "Scan QR Code",
+        "manually_complete": "Complete Manually",
+        "completing": "Completing...",
+        "complete_order": "Complete Order",
+        "complete_confirm_msg": "Are you sure you want to verify and complete this order? This usually happens after scanning the QR code.",
+        "complete": "Complete",
+        "order_completed": "Order completed successfully!",
+        "scan_qr_title": "QR Scan",
+        "scan_mock_msg": "Opening camera... (QR scanned successfully)",
+        "simulate_success": "Simulate Success"
+    },
+    "manage_products": {
+        "title": "Manage Products",
+        "loading": "Loading products...",
+        "no_products": "No products yet",
+        "no_products_subtitle": "Tap the + button to add your first product",
+        "add_first_product": "Add First Product",
+        "delete_title": "Delete Product",
+        "delete_confirm": "Are you sure you want to delete \"{{name}}\"?",
+        "product_deleted": "Product deleted successfully",
+        "edit_coming_soon": "Edit feature coming soon"
+    },
+    "store_settings": {
+        "title": "Store Settings",
+        "business_info": "Business Information",
+        "store_name": "Store Name",
+        "email": "Email",
+        "status": "Status",
+        "active": "Active",
+        "not_set": "Not set",
+        "store_actions": "Store Actions",
+        "edit_business_info": "Edit Business Info",
+        "update_location": "Update Location",
+        "business_hours": "Business Hours"
     },
     "errors": {
         "network": "Network error. Please check your connection.",
         "required": "This field is required",
         "email_invalid": "Invalid email address"
+    },
+    "seller": {
+        "welcome": "Welcome,",
+        "store_status": "Store Status",
+        "open_for_orders": "Open for Orders",
+        "closed": "Closed",
+        "todays_earnings": "Today's Earnings",
+        "orders_rescued": "Orders Rescued",
+        "live_orders": "Live Orders",
+        "see_all": "See All",
+        "no_active_orders": "No Active Orders",
+        "new_orders_hint": "New orders will appear here",
+        "add_product": "Add Product",
+        "new_listing": "New Listing",
+        "select_category": "Select Category",
+        "category_subtitle": "Help customers find your food faster",
+        "item_name": "Item Name *",
+        "item_name_placeholder": "e.g. Surprise Bag",
+        "description": "Description *",
+        "description_placeholder": "What's in the bag? Mention any allergens.",
+        "pricing_stock": "Pricing & Stock",
+        "original_price": "ORIGINAL PRICE *",
+        "sale_price": "SALE PRICE *",
+        "quantity": "QUANTITY",
+        "off": "off",
+        "pickup_window": "Pickup Window",
+        "pickup_subtitle": "When can customers collect their orders?",
+        "start": "Start",
+        "end": "End",
+        "start_time": "Start Time",
+        "end_time": "End Time",
+        "pickup_duration": "Pickup window:",
+        "publish_listing": "Publish Listing",
+        "success_product_created": "Your product has been listed successfully",
+        "missing_info": "Missing Information",
+        "enter_product_name": "Please enter a product name",
+        "enter_description": "Please enter a description",
+        "invalid_price": "Invalid Price",
+        "enter_valid_original_price": "Please enter a valid original price",
+        "enter_valid_sale_price": "Please enter a valid sale price",
+        "sale_price_error": "Sale price must be less than original price",
+        "invalid_quantity": "Invalid Quantity",
+        "quantity_error": "Quantity must be at least 1",
+        "select_category_error": "Please select a category",
+        "invalid_pickup_time": "Invalid Pickup Time",
+        "pickup_time_error": "Pickup start time must be at least 30 minutes from now. Please adjust the time.",
+        "pickup_today": "Pickup: Today",
+        "categories": {
+            "bakery": "Bakery",
+            "desserts": "Desserts",
+            "fast_food": "Fast Food",
+            "traditional": "Traditional",
+            "salad": "Salads & Healthy"
+        },
+        "product": {
+            "status": {
+                "active": "Active",
+                "draft": "Draft",
+                "sold_out": "Sold Out",
+                "expired": "Expired",
+                "deactivated": "Deactivated"
+            },
+            "left": "left",
+            "edit": "Edit",
+            "delete": "Delete"
+        }
     }
 }
