--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -12,7 +12,10 @@
         "confirm": "Подтвердить",
         "close": "Закрыть",
         "retry": "Повторить",
-        "success": "Успешно"
+        "success": "Успешно",
+        "ok": "OK",
+        "info": "Информация",
+        "try_again": "Повторить"
     },
     "auth": {
         "login": "Войти",
@@ -41,14 +44,78 @@
         "terms_required_msg": "Пожалуйста, согласитесь с Условиями использования для продолжения",
         "registration_success_title": "Успешно!",
         "registration_success_msg": "Аккаунт успешно создан",
-        "registration_failed_title": "Ошибка регистрации"
+        "registration_failed_title": "Ошибка регистрации",
+        "sign_out": "Выйти",
+        "sign_out_confirm": "Вы уверены, что хотите выйти?"
     },
     "navigation": {
         "home": "Главная",
-        "discovery": "Обзор",
+        "map": "Карта",
         "orders": "Заказы",
-        "favorites": "Избранное",
-        "profile": "Профиль"
+        "saved": "Избранное",
+        "profile": "Профиль",
+        "inventory": "Склад",
+        "account": "Аккаунт",
+        "dashboard": "Панель"
+    },
+    "settings": {
+        "title": "Настройки",
+        "preferences": "НАСТРОЙКИ",
+        "location_services": "Службы геолокации",
+        "location_subtitle": "Находите предложения рядом с вами",
+        "dark_mode": "Тёмная тема",
+        "coming_soon": "Скоро",
+        "language": "Язык",
+        "select_language": "Выберите язык",
+        "choose_language": "Выберите предпочтительный язык",
+        "support": "ПОДДЕРЖКА",
+        "help_center": "Центр помощи",
+        "terms": "Условия использования"
+    },
+    "discovery": {
+        "location_permission": "Разрешение на геолокацию",
+        "location_permission_msg": "Нам нужна ваша геолокация, чтобы показать ближайшие магазины.",
+        "permission_denied": "Разрешение отклонено",
+        "permission_denied_msg": "Невозможно найти ближайшие магазины без доступа к геолокации.",
+        "current_location": "Текущее местоположение",
+        "set_location": "Установить местоположение",
+        "search_placeholder": "Искать еду...",
+        "nearby_sellers": "Ближайшие продавцы",
+        "see_all": "Все ›",
+        "available_now": "Доступно сейчас",
+        "offers": "предложений",
+        "location_required": "Требуется геолокация",
+        "location_required_msg": "Включите геолокацию, чтобы видеть ближайшие магазины и товары.",
+        "enable_location": "Включить геолокацию",
+        "no_products": "Товары не найдены",
+        "no_products_subtitle": "Попробуйте изменить фильтры или проверьте позже",
+        "could_not_update_favorites": "Не удалось обновить избранное",
+        "open_settings": "Открыть настройки"
+    },
+    "product_detail": {
+        "pickup_time": "Время самовывоза",
+        "available": "Доступно",
+        "item_left": "{{count}} шт. осталось",
+        "items_left": "{{count}} шт. осталось",
+        "store_location": "Местоположение магазина",
+        "open_in_maps": "Открыть на карте",
+        "what_you_get": "Что вы получите",
+        "default_description": "Удивительная подборка вкусных излишков еды.",
+        "quantity": "Количество",
+        "total": "Итого",
+        "you_save": "Вы экономите ${{amount}}",
+        "reserve_now": "Забронировать",
+        "reserving": "Бронирование...",
+        "sold_out": "Продано",
+        "loading": "Загрузка информации о товаре...",
+        "error_title": "Не удалось загрузить товар",
+        "error_subtitle": "Проверьте подключение и попробуйте снова",
+        "km_away": "{{distance}} км",
+        "login_to_reserve": "Войдите, чтобы забронировать!",
+        "login_to_save": "Войдите, чтобы сохранить избранное!",
+        "booking_failed": "Ошибка бронирования",
+        "could_not_update_favorites": "Не удалось обновить избранное. Попробуйте ещё раз.",
+        "could_not_open_maps": "Не удалось открыть приложение карт."
     },
     "store": {
         "follow": "Подписаться",
@@ -58,11 +125,234 @@
         "reviews_count_many": "{{count}} отзывов",
         "reviews_count_other": "{{count}} отзывов",
         "about": "О магазине",
-        "reviews": "Отзывы"
+        "reviews": "Отзывы",
+        "products": "Товары",
+        "no_products": "Товары пока отсутствуют",
+        "address_not_available": "Адрес недоступен",
+        "login_to_follow": "Войдите, чтобы подписаться на магазины."
+    },
+    "orders": {
+        "active": "Активные",
+        "past": "История",
+        "no_orders": "У вас пока нет {{status}} заказов.",
+        "no_orders_subtitle": "Ваши новые заказы появятся здесь.",
+        "could_not_load": "Не удалось загрузить ваши заказы.",
+        "today": "СЕГОДНЯ",
+        "yesterday": "ВЧЕРА",
+        "current_orders": "ТЕКУЩИЕ ЗАКАЗЫ",
+        "confirmation": "Подтверждение",
+        "order_confirmed": "Отлично! Заказ ваш.",
+        "show_code_msg": "Покажите этот код сотрудникам {{storeName}}.",
+        "scan_at_pickup": "СКАНИРУЙТЕ ПРИ ПОЛУЧЕНИИ",
+        "paid_confirmed": "Оплачено и подтверждено",
+        "pickup_window": "ВРЕМЯ ПОЛУЧЕНИЯ",
+        "get_directions": "Проложить маршрут",
+        "contact_support": "Есть проблемы? Обратитесь в поддержку",
+        "write_review": "Оставить отзыв",
+        "back_to_home": "На главную",
+        "could_not_load_detail": "Не удалось загрузить детали заказа.",
+        "order_success": "Успешно!",
+        "order_confirmed_subtitle": "Ваш заказ подтверждён.",
+        "back_to_discover": "На главную",
+        "pickup_at": "Место получения:"
+    },
+    "favorites": {
+        "title": "Избранное",
+        "no_favorites": "Нет избранных товаров",
+        "no_favorites_subtitle": "Нажмите на сердечко на товаре, чтобы сохранить его здесь.",
+        "start_exploring": "Начать поиск",
+        "could_not_load": "Не удалось загрузить избранное.",
+        "followed_stores": "Подписки",
+        "no_followed_stores": "Вы ещё не подписаны ни на один магазин.",
+        "explore_stores": "Обзор магазинов"
+    },
+    "profile": {
+        "loading": "Загрузка профиля...",
+        "could_not_load": "Не удалось загрузить профиль",
+        "check_connection": "Проверьте подключение и попробуйте снова",
+        "member_since": "Участник с {{date}}",
+        "seller_badge": "Продавец",
+        "food_saver": "Спаситель еды",
+        "saved_deals": "Сохранённые предложения",
+        "saved_deals_subtitle": "Ваши избранные товары",
+        "followed_stores": "Подписки на магазины",
+        "followed_stores_subtitle": "Магазины, на которые вы подписаны",
+        "notifications": "Уведомления",
+        "notifications_subtitle": "Управляйте уведомлениями",
+        "become_seller": "Стать продавцом",
+        "become_seller_subtitle": "Начните продавать излишки еды",
+        "dashboard_analytics": "Панель и аналитика",
+        "manage_products": "Управление товарами",
+        "view_orders": "Просмотр заказов",
+        "store_settings": "Настройки магазина",
+        "settings": "Настройки",
+        "settings_subtitle": "Настройки приложения",
+        "help_support": "Помощь и поддержка",
+        "help_subtitle": "Получите помощь по приложению",
+        "guest_hero": "Присоединяйтесь к тысячам спасителей еды",
+        "guest_cta_title": "Присоединяйтесь к борьбе с пищевыми отходами",
+        "guest_cta_subtitle": "Спасайте вкусную еду рядом, экономьте деньги и помогайте планете.",
+        "about_mazza": "О MAZZA",
+        "how_it_works": "Как это работает",
+        "support": "Поддержка"
+    },
+    "notifications": {
+        "title": "Уведомления",
+        "mark_all_read": "Отметить все как прочитанные",
+        "no_notifications": "Нет уведомлений",
+        "no_notifications_subtitle": "Всё актуально! Проверьте позже."
+    },
+    "become_seller": {
+        "title": "Стать продавцом",
+        "subtitle": "Присоединяйтесь к сообществу продавцов!",
+        "select_category": "Выберите категорию бизнеса",
+        "location_permission_required": "Требуется разрешение на геолокацию",
+        "location_permission_msg": "Включите геолокацию для автозаполнения адреса бизнеса. Вы также можете ввести его вручную.",
+        "location_error": "Ошибка геолокации",
+        "location_error_msg": "Не удалось определить местоположение. Введите адрес бизнеса вручную.",
+        "location_success_msg": "Местоположение получено! Проверьте поля адреса и города.",
+        "application_submitted": "Заявка подана",
+        "application_submitted_msg": "Спасибо! Ваша заявка на рассмотрении.",
+        "application_failed": "Ошибка подачи заявки",
+        "categories_load_failed": "Не удалось загрузить категории бизнеса."
+    },
+    "location_onboarding": {
+        "permission_title": "Разрешение на геолокацию",
+        "permission_msg": "Разрешите доступ при использовании приложения, чтобы находить ближайшие магазины.",
+        "permission_denied_msg": "Доступ к геолокации отклонён. Функции будут ограничены.",
+        "location_error_msg": "Не удалось получить геолокацию. Убедитесь, что GPS включён.",
+        "save_error": "Не удалось сохранить местоположение. Попробуйте ещё раз.",
+        "enable_location": "Включить геолокацию",
+        "description": "Нам нужна ваша геолокация, чтобы показывать лучшие предложения рядом.",
+        "use_current_location": "Использовать текущее местоположение",
+        "enter_manually": "Ввести адрес вручную",
+        "coming_soon_msg": "Ручной выбор местоположения скоро появится."
+    },
+    "seller_orders": {
+        "title": "Заказы",
+        "loading": "Загрузка заказов...",
+        "no_orders": "Заказов пока нет",
+        "no_orders_subtitle": "Заказы клиентов появятся здесь",
+        "paid": "ОПЛАЧЕНО",
+        "pending": "ОЖИДАНИЕ",
+        "pickup": "Получение: {{time}}"
+    },
+    "seller_order_detail": {
+        "title": "Детали заказа",
+        "completed": "ВЫПОЛНЕНО",
+        "ready_for_pickup": "ГОТОВО К ВЫДАЧЕ",
+        "pending_payment": "ОЖИДАНИЕ ОПЛАТЫ",
+        "order_number": "Заказ #{{number}}",
+        "placed_on": "Оформлен {{date}} в {{time}}",
+        "customer": "Покупатель",
+        "items": "Товары",
+        "quantity_x": "Кол-во: x{{quantity}}",
+        "total": "Итого",
+        "scan_hint": "Отсканируйте QR-код покупателя для проверки и завершения заказа.",
+        "scan_qr": "Сканировать QR-код",
+        "manually_complete": "Завершить вручную",
+        "completing": "Завершение...",
+        "complete_order": "Завершить заказ",
+        "complete_confirm_msg": "Вы уверены, что хотите проверить и завершить этот заказ? Обычно это происходит после сканирования QR-кода.",
+        "complete": "Завершить",
+        "order_completed": "Заказ успешно завершён!",
+        "scan_qr_title": "QR сканирование",
+        "scan_mock_msg": "Открытие камеры... (QR успешно отсканирован)",
+        "simulate_success": "Имитировать успех"
+    },
+    "manage_products": {
+        "title": "Управление товарами",
+        "loading": "Загрузка товаров...",
+        "no_products": "Товаров пока нет",
+        "no_products_subtitle": "Нажмите +, чтобы добавить первый товар",
+        "add_first_product": "Добавить первый товар",
+        "delete_title": "Удалить товар",
+        "delete_confirm": "Вы уверены, что хотите удалить \"{{name}}\"?",
+        "product_deleted": "Товар успешно удалён",
+        "edit_coming_soon": "Функция редактирования скоро появится"
+    },
+    "store_settings": {
+        "title": "Настройки магазина",
+        "business_info": "Информация о бизнесе",
+        "store_name": "Название магазина",
+        "email": "Email",
+        "status": "Статус",
+        "active": "Активный",
+        "not_set": "Не указано",
+        "store_actions": "Действия магазина",
+        "edit_business_info": "Редактировать информацию о бизнесе",
+        "update_location": "Обновить местоположение",
+        "business_hours": "Часы работы"
     },
     "errors": {
         "network": "Ошибка сети. Проверьте подключение.",
         "required": "Это поле обязательно",
         "email_invalid": "Некорректный email"
+    },
+    "seller": {
+        "welcome": "Добро пожаловать,",
+        "store_status": "Статус магазина",
+        "open_for_orders": "Открыто для заказов",
+        "closed": "Закрыто",
+        "todays_earnings": "Доход за сегодня",
+        "orders_rescued": "Спасено заказов",
+        "live_orders": "Активные заказы",
+        "see_all": "Все",
+        "no_active_orders": "Нет активных заказов",
+        "new_orders_hint": "Новые заказы появятся здесь",
+        "add_product": "Добавить товар",
+        "new_listing": "Новое объявление",
+        "select_category": "Выберите категорию",
+        "category_subtitle": "Помогите клиентам быстрее найти вашу еду",
+        "item_name": "Название товара *",
+        "item_name_placeholder": "например, Сумка-сюрприз",
+        "description": "Описание *",
+        "description_placeholder": "Что внутри? Укажите аллергены.",
+        "pricing_stock": "Цена и наличие",
+        "original_price": "ОРИГИНАЛЬНАЯ ЦЕНА *",
+        "sale_price": "ЦЕНА СО СКИДКОЙ *",
+        "quantity": "КОЛИЧЕСТВО",
+        "off": "скидка",
+        "pickup_window": "Окно самовывоза",
+        "pickup_subtitle": "Когда клиенты могут забрать заказы?",
+        "start": "Начало",
+        "end": "Конец",
+        "start_time": "Время начала",
+        "end_time": "Время окончания",
+        "pickup_duration": "Окно самовывоза:",
+        "publish_listing": "Опубликовать",
+        "success_product_created": "Товар успешно добавлен",
+        "missing_info": "Недостаточно информации",
+        "enter_product_name": "Пожалуйста, введите название товара",
+        "enter_description": "Пожалуйста, введите описание",
+        "invalid_price": "Некорректная цена",
+        "enter_valid_original_price": "Введите корректную оригинальную цену",
+        "enter_valid_sale_price": "Введите корректную цену со скидкой",
+        "sale_price_error": "Цена со скидкой должна быть ниже оригинальной",
+        "invalid_quantity": "Некорректное количество",
+        "quantity_error": "Количество должно быть не менее 1",
+        "select_category_error": "Пожалуйста, выберите категорию",
+        "invalid_pickup_time": "Некорректное время",
+        "pickup_time_error": "Время начала должно быть минимум через 30 минут от текущего времени.",
+        "pickup_today": "Получение: Сегодня",
+        "categories": {
+            "bakery": "Выпечка",
+            "desserts": "Десерты",
+            "fast_food": "Фастфуд",
+            "traditional": "Традиционная",
+            "salad": "Салаты и Здоровое"
+        },
+        "product": {
+            "status": {
+                "active": "Активный",
+                "draft": "Черновик",
+                "sold_out": "Продано",
+                "expired": "Истек",
+                "deactivated": "Отключен"
+            },
+            "left": "осталось",
+            "edit": "Изменить",
+            "delete": "Удалить"
+        }
     }
 }
