--- a/src/localization/locales/uz.json
+++ b/src/localization/locales/uz.json
@@ -12,7 +12,10 @@
         "confirm": "Tasdiqlash",
         "close": "Yopish",
         "retry": "Qayta urinish",
-        "success": "Muvaffaqiyatli"
+        "success": "Muvaffaqiyatli",
+        "ok": "OK",
+        "info": "Ma'lumot",
+        "try_again": "Qayta urinish"
     },
     "auth": {
         "login": "Kirish",
@@ -41,14 +44,78 @@
         "terms_required_msg": "Davom etish uchun Foydalanish shartlariga rozi bo'ling",
         "registration_success_title": "Muvaffaqiyatli!",
         "registration_success_msg": "Hisob muvaffaqiyatli yaratildi",
-        "registration_failed_title": "Ro'yxatdan o'tishda xatolik"
+        "registration_failed_title": "Ro'yxatdan o'tishda xatolik",
+        "sign_out": "Chiqish",
+        "sign_out_confirm": "Haqiqatan ham chiqmoqchimisiz?"
     },
     "navigation": {
         "home": "Bosh sahifa",
-        "discovery": "Keshfiyot",
+        "map": "Xarita",
         "orders": "Buyurtmalar",
-        "favorites": "Sevimlilar",
-        "profile": "Profil"
+        "saved": "Saqlangan",
+        "profile": "Profil",
+        "inventory": "Ombor",
+        "account": "Hisob",
+        "dashboard": "Boshqaruv"
+    },
+    "settings": {
+        "title": "Sozlamalar",
+        "preferences": "SOZLAMALAR",
+        "location_services": "Joylashuv xizmatlari",
+        "location_subtitle": "Yaqin atrofdagi takliflarni toping",
+        "dark_mode": "Qorong'u rejim",
+        "coming_soon": "Tez kunda",
+        "language": "Til",
+        "select_language": "Tilni tanlang",
+        "choose_language": "O'zingizga qulay tilni tanlang",
+        "support": "YORDAM",
+        "help_center": "Yordam markazi",
+        "terms": "Foydalanish shartlari"
+    },
+    "discovery": {
+        "location_permission": "Joylashuv ruxsati",
+        "location_permission_msg": "Yaqin atrofdagi do'konlarni ko'rsatish uchun joylashuvingiz kerak.",
+        "permission_denied": "Ruxsat rad etildi",
+        "permission_denied_msg": "Joylashuvsiz yaqin atrofdagi do'konlarni topib bo'lmaydi.",
+        "current_location": "Joriy joylashuv",
+        "set_location": "Joylashuvni belgilash",
+        "search_placeholder": "Ovqat qidirish...",
+        "nearby_sellers": "Yaqin atrofdagi sotuvchilar",
+        "see_all": "Barchasi ›",
+        "available_now": "Hozir mavjud",
+        "offers": "takliflar",
+        "location_required": "Joylashuv kerak",
+        "location_required_msg": "Yaqin atrofdagi do'kon va mahsulotlarni ko'rish uchun joylashuvni yoqing.",
+        "enable_location": "Joylashuvni yoqish",
+        "no_products": "Mahsulotlar topilmadi",
+        "no_products_subtitle": "Filtrlarni o'zgartiring yoki keyinroq qayta tekshiring",
+        "could_not_update_favorites": "Sevimlilarni yangilab bo'lmadi",
+        "open_settings": "Sozlamalarni ochish"
+    },
+    "product_detail": {
+        "pickup_time": "Olib ketish vaqti",
+        "available": "Mavjud",
+        "item_left": "{{count}} dona qoldi",
+        "items_left": "{{count}} dona qoldi",
+        "store_location": "Do'kon joylashuvi",
+        "open_in_maps": "Xaritada ochish",
+        "what_you_get": "Nima olasiz",
+        "default_description": "Ajoyib ortiqcha oziq-ovqat mahsulotlari to'plami.",
+        "quantity": "Miqdor",
+        "total": "Jami",
+        "you_save": "${{amount}} tejaysiz",
+        "reserve_now": "Hozir band qilish",
+        "reserving": "Band qilinmoqda...",
+        "sold_out": "Sotildi",
+        "loading": "Mahsulot ma'lumotlari yuklanmoqda...",
+        "error_title": "Mahsulotni yuklab bo'lmadi",
+        "error_subtitle": "Aloqangizni tekshiring va qayta urinib ko'ring",
+        "km_away": "{{distance}} km uzoqlikda",
+        "login_to_reserve": "Band qilish uchun tizimga kiring!",
+        "login_to_save": "Sevimlilarni saqlash uchun tizimga kiring!",
+        "booking_failed": "Band qilish muvaffaqiyatsiz",
+        "could_not_update_favorites": "Sevimlilarni yangilab bo'lmadi. Qayta urinib ko'ring.",
+        "could_not_open_maps": "Xarita ilovasini ochib bo'lmadi."
     },
     "store": {
         "follow": "Obuna bo'lish",
@@ -56,11 +123,234 @@
         "reviews_count": "{{count}} sharh",
         "reviews_count_other": "{{count}} sharh",
         "about": "Do'kon haqida",
-        "reviews": "Sharhlar"
+        "reviews": "Sharhlar",
+        "products": "Mahsulotlar",
+        "no_products": "Hozircha mahsulotlar mavjud emas",
+        "address_not_available": "Manzil mavjud emas",
+        "login_to_follow": "Do'konlarga obuna bo'lish uchun tizimga kirishingiz kerak."
+    },
+    "orders": {
+        "active": "Faol",
+        "past": "Tarix",
+        "no_orders": "Sizda hali {{status}} buyurtmalar yo'q.",
+        "no_orders_subtitle": "Yangi buyurtmalaringiz shu yerda paydo bo'ladi.",
+        "could_not_load": "Buyurtmalaringizni yuklab bo'lmadi.",
+        "today": "BUGUN",
+        "yesterday": "KECHA",
+        "current_orders": "JORIY BUYURTMALAR",
+        "confirmation": "Tasdiqlash",
+        "order_confirmed": "Ajoyib! Bu sizniki.",
+        "show_code_msg": "Bu kodni {{storeName}} xodimlariga ko'rsating.",
+        "scan_at_pickup": "OLIB KETISHDA SKANERLANG",
+        "paid_confirmed": "To'langan va tasdiqlangan",
+        "pickup_window": "OLIB KETISH VAQTI",
+        "get_directions": "Yo'nalishni olish",
+        "contact_support": "Muammo bormi? Qo'llab-quvvatlashga murojaat qiling",
+        "write_review": "Sharh yozish",
+        "back_to_home": "Bosh sahifaga qaytish",
+        "could_not_load_detail": "Buyurtma tafsilotlarini yuklab bo'lmadi.",
+        "order_success": "Muvaffaqiyatli!",
+        "order_confirmed_subtitle": "Buyurtmangiz tasdiqlandi.",
+        "back_to_discover": "Bosh sahifaga qaytish",
+        "pickup_at": "Olib ketish joyi:"
+    },
+    "favorites": {
+        "title": "Sevimlilar",
+        "no_favorites": "Sevimli mahsulotlaringiz yo'q",
+        "no_favorites_subtitle": "Mahsulotdagi yurak belgisini bosib, uni shu yerga saqlang.",
+        "start_exploring": "Kashf etishni boshlash",
+        "could_not_load": "Sevimlilaringizni yuklab bo'lmadi.",
+        "followed_stores": "Obunalar",
+        "no_followed_stores": "Siz hali hech qaysi do'konga obuna bo'lmagansiz.",
+        "explore_stores": "Do'konlarni ko'rish"
+    },
+    "profile": {
+        "loading": "Profilingiz yuklanmoqda...",
+        "could_not_load": "Profilni yuklab bo'lmadi",
+        "check_connection": "Aloqangizni tekshiring va qayta urinib ko'ring",
+        "member_since": "{{date}} dan a'zo",
+        "seller_badge": "Sotuvchi",
+        "food_saver": "Ovqat tejovchi",
+        "saved_deals": "Saqlangan takliflar",
+        "saved_deals_subtitle": "Sizning sevimli tanlovlaringiz",
+        "followed_stores": "Obuna bo'lgan do'konlar",
+        "followed_stores_subtitle": "Siz obuna bo'lgan do'konlar",
+        "notifications": "Bildirishnomalar",
+        "notifications_subtitle": "Ogohlantirishlaringizni boshqaring",
+        "become_seller": "Sotuvchi bo'lish",
+        "become_seller_subtitle": "Ortiqcha ovqatni sotishni boshlang",
+        "dashboard_analytics": "Boshqaruv va tahlil",
+        "manage_products": "Mahsulotlarni boshqarish",
+        "view_orders": "Buyurtmalarni ko'rish",
+        "store_settings": "Do'kon sozlamalari",
+        "settings": "Sozlamalar",
+        "settings_subtitle": "Ilova sozlamalari",
+        "help_support": "Yordam va qo'llab-quvvatlash",
+        "help_subtitle": "Ilova bo'yicha yordam oling",
+        "guest_hero": "Minglab ovqat tejovchilarga qo'shiling",
+        "guest_cta_title": "Oziq-ovqat isrofiga qarshi kurashga qo'shiling",
+        "guest_cta_subtitle": "Yaqin atrofdagi mazali ovqatni qutqarib, pul tejang va sayyoramizni asrang.",
+        "about_mazza": "MAZZA HAQIDA",
+        "how_it_works": "Qanday ishlaydi",
+        "support": "Qo'llab-quvvatlash"
+    },
+    "notifications": {
+        "title": "Bildirishnomalar",
+        "mark_all_read": "Hammasini o'qilgan deb belgilash",
+        "no_notifications": "Bildirishnomalar yo'q",
+        "no_notifications_subtitle": "Hammasi yangilangan! Keyinroq yangiliklar uchun tekshiring."
+    },
+    "become_seller": {
+        "title": "Sotuvchi bo'lish",
+        "subtitle": "Sotuvchilar jamoamizga qo'shiling!",
+        "select_category": "Biznes kategoriyasini tanlang",
+        "location_permission_required": "Joylashuv ruxsati kerak",
+        "location_permission_msg": "Biznes manzilingizni avtomatik to'ldirish uchun joylashuv ruxsatini yoqing. Shuningdek, qo'lda kiritishingiz mumkin.",
+        "location_error": "Joylashuv xatosi",
+        "location_error_msg": "Joylashuvingizni olib bo'lmadi. Biznes manzilingizni qo'lda kiriting.",
+        "location_success_msg": "Joylashuv olingan! Manzil va shahar maydonlarini tekshiring.",
+        "application_submitted": "Ariza topshirildi",
+        "application_submitted_msg": "Rahmat! Arizangiz ko'rib chiqilmoqda.",
+        "application_failed": "Ariza muvaffaqiyatsiz",
+        "categories_load_failed": "Biznes kategoriyalarini yuklab bo'lmadi."
+    },
+    "location_onboarding": {
+        "permission_title": "Joylashuv ruxsati",
+        "permission_msg": "Ilovadan foydalanish paytida, eng yaqin do'konlarni topish uchun doimo ruxsat bering.",
+        "permission_denied_msg": "Joylashuvga kirish uchun ruxsat rad etildi. Imkoniyatlar cheklanadi.",
+        "location_error_msg": "Joylashuvni olib bo'lmadi. GPS yoqilganligiga ishonch hosil qiling.",
+        "save_error": "Joylashuvni saqlab bo'lmadi. Qayta urinib ko'ring.",
+        "enable_location": "Joylashuvni yoqish",
+        "description": "Yaqiningizdagi eng yaxshi oziq-ovqatni qutqarish takliflarini ko'rsatish uchun joylashuvingiz kerak.",
+        "use_current_location": "Joriy joylashuvdan foydalanish",
+        "enter_manually": "Manzilni qo'lda kiriting",
+        "coming_soon_msg": "Qo'lda joylashuvni tanlash tez kunda qo'shiladi."
+    },
+    "seller_orders": {
+        "title": "Buyurtmalar",
+        "loading": "Buyurtmalar yuklanmoqda...",
+        "no_orders": "Hali buyurtmalar yo'q",
+        "no_orders_subtitle": "Xaridorlarning buyurtmalari shu yerda paydo bo'ladi",
+        "paid": "TO'LANGAN",
+        "pending": "KUTILMOQDA",
+        "pickup": "Olib ketish: {{time}}"
+    },
+    "seller_order_detail": {
+        "title": "Buyurtma tafsilotlari",
+        "completed": "BAJARILDI",
+        "ready_for_pickup": "OLIB KETISHGA TAYYOR",
+        "pending_payment": "TO'LOV KUTILMOQDA",
+        "order_number": "Buyurtma #{{number}}",
+        "placed_on": "{{date}} da {{time}} da berilgan",
+        "customer": "Xaridor",
+        "items": "Mahsulotlar",
+        "quantity_x": "Miqdor: x{{quantity}}",
+        "total": "Jami",
+        "scan_hint": "Buyurtmani tekshirish va bajarish uchun xaridorning QR kodini skanerlang.",
+        "scan_qr": "QR kodni skanerlash",
+        "manually_complete": "Qo'lda bajarish",
+        "completing": "Bajarilmoqda...",
+        "complete_order": "Buyurtmani bajarish",
+        "complete_confirm_msg": "Haqiqatan ham bu buyurtmani tekshirib, bajarmoqchimisiz? Odatda bu QR kodni skanerlashdan keyin sodir bo'ladi.",
+        "complete": "Bajarish",
+        "order_completed": "Buyurtma muvaffaqiyatli bajarildi!",
+        "scan_qr_title": "QR skanerlash",
+        "scan_mock_msg": "Kamera ochilmoqda... (QR muvaffaqiyatli skanerlandi)",
+        "simulate_success": "Muvaffaqiyatni simulyatsiya qilish"
+    },
+    "manage_products": {
+        "title": "Mahsulotlarni boshqarish",
+        "loading": "Mahsulotlar yuklanmoqda...",
+        "no_products": "Mahsulotlar yo'q",
+        "no_products_subtitle": "Birinchi mahsulotingizni qo'shish uchun + tugmasini bosing",
+        "add_first_product": "Birinchi mahsulotni qo'shish",
+        "delete_title": "Mahsulotni o'chirish",
+        "delete_confirm": "\"{{name}}\" ni o'chirishga ishonchingiz komilmi?",
+        "product_deleted": "Mahsulot muvaffaqiyatli o'chirildi",
+        "edit_coming_soon": "Tahrirlash funksiyasi tez kunda qo'shiladi"
+    },
+    "store_settings": {
+        "title": "Do'kon sozlamalari",
+        "business_info": "Biznes ma'lumotlari",
+        "store_name": "Do'kon nomi",
+        "email": "Email",
+        "status": "Holat",
+        "active": "Faol",
+        "not_set": "O'rnatilmagan",
+        "store_actions": "Do'kon amallari",
+        "edit_business_info": "Biznes ma'lumotlarini tahrirlash",
+        "update_location": "Joylashuvni yangilash",
+        "business_hours": "Ish vaqti"
     },
     "errors": {
         "network": "Tarmoq xatosi. Aloqani tekshiring.",
         "required": "Bu maydon majburiy",
         "email_invalid": "Email noto'g'ri"
+    },
+    "seller": {
+        "welcome": "Xush kelibsiz,",
+        "store_status": "Do'kon holati",
+        "open_for_orders": "Buyurtmalar uchun ochiq",
+        "closed": "Yopiq",
+        "todays_earnings": "Bugungi daromad",
+        "orders_rescued": "Qutqarilgan buyurtmalar",
+        "live_orders": "Jonli buyurtmalar",
+        "see_all": "Barchasi ›",
+        "no_active_orders": "Faol buyurtmalar yo'q",
+        "new_orders_hint": "Yangi buyurtmalar shu yerda paydo bo'ladi",
+        "add_product": "Mahsulot qo'shish",
+        "new_listing": "Yangi e'lon",
+        "select_category": "Kategoriyani tanlang",
+        "category_subtitle": "Xaridorlarga ovqatingizni tezroq topishga yordam bering",
+        "item_name": "Mahsulot nomi *",
+        "item_name_placeholder": "m-n. Kutilmagan sumka",
+        "description": "Tavsif *",
+        "description_placeholder": "Sumkada nima bor? Allergenlarni kiritishni unutmang.",
+        "pricing_stock": "Narx va ombor",
+        "original_price": "ASL NARXI *",
+        "sale_price": "SOTUV NARXI *",
+        "quantity": "MIQDOR",
+        "off": "chegirma",
+        "pickup_window": "Olib ketish vaqti",
+        "pickup_subtitle": "Xaridorlar buyurtmalarni qachon olib ketishlari mumkin?",
+        "start": "Boshlanish",
+        "end": "Tugash",
+        "start_time": "Boshlanish vaqti",
+        "end_time": "Tugash vaqti",
+        "pickup_duration": "Olib ketish oralig'i:",
+        "publish_listing": "E'lonni chop etish",
+        "success_product_created": "Mahsulot muvaffaqiyatli yaratildi",
+        "missing_info": "Ma'lumot yetishmayapti",
+        "enter_product_name": "Iltimos, mahsulot nomini kiriting",
+        "enter_description": "Iltimos, tavsif kiriting",
+        "invalid_price": "Noto'g'ri narx",
+        "enter_valid_original_price": "Iltimos, to'g'ri asl narxni kiriting",
+        "enter_valid_sale_price": "Iltimos, to'g'ri sotuv narxini kiriting",
+        "sale_price_error": "Sotuv narxi asl narxdan past bo'lishi kerak",
+        "invalid_quantity": "Noto'g'ri miqdor",
+        "quantity_error": "Miqdor kamida 1 bo'lishi kerak",
+        "select_category_error": "Iltimos, kategoriyani tanlang",
+        "invalid_pickup_time": "Noto'g'ri olib ketish vaqti",
+        "pickup_time_error": "Olib ketish boshlanish vaqti hozirgi vaqtdan kamida 30 daqiqa keyin bo'lishi kerak.",
+        "pickup_today": "Olib ketish: Bugun",
+        "categories": {
+            "bakery": "Non mahsulotlari",
+            "desserts": "Shirinliklar",
+            "fast_food": "Tez tayyorlanadigan",
+            "traditional": "Milliy taomlar",
+            "salad": "Salatlar va Sog'lom"
+        },
+        "product": {
+            "status": {
+                "active": "Faol",
+                "draft": "Qoralama",
+                "sold_out": "Sotildi",
+                "expired": "Muddati o'tgan",
+                "deactivated": "Faolsizlantirilgan"
+            },
+            "left": "qoldi",
+            "edit": "Tahrirlash",
+            "delete": "O'chirish"
+        }
     }
 }
